Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104928

qmlimportscanner: segfault on unexpected argument

    XMLWordPrintable

Details

    • d937a53cbc (qt/qtdeclarative/dev) d937a53cbc (qt/tqtc-qtdeclarative/dev) 5867c3e1bb (qt/qtdeclarative/6.4) 5867c3e1bb (qt/tqtc-qtdeclarative/6.4)

    Description

      $ qmlimportscanner /tmp
      [
      ]
      
      $ qmlimportscanner /tmp /tmp
      Segmentation fault (core dumped)
      
      $ mkdir /tmp/asdf
      
      $ qmlimportscanner /tmp /tmp/asdf
      Segmentation fault (core dumped)
      

      i tried to get a backtrace, but its empty

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            milahu milan hauth
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes